--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "next.config.js",
+    "webpack.config.js", "src/pages/blog/index.jsx",
   ],
   "exclude": [
     "node_modules"
