--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pessoal-site",
+  "name": "kauefraga.com",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -13,21 +13,16 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.23.0",
-    "bcryptjs": "^2.4.3",
-    "cep-promise": "^4.1.1",
     "framer-motion": "^4",
-    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "next": "11.1.2",
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.17.5"
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.4.1",
-    "@types/jsonwebtoken": "^8.5.5",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
